<resources>
    <string name="app_name">Student Grade Entry with RoomDB And Firestore</string>
    <string name="Authentication">Authentication</string>
    <string name="signUp">Sign Up</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="userName">User Name</string>
    <string name="returnToSignIn">Return to Sign In</string>
    <string name="signIn">Sign In</string>
    <string name="lessonCode">Lesson Code</string>
    <string name="lessonName">Lesson Name</string>
    <string name="lessonMidtermExam">Midterm Exam</string>
    <string name="lessonFinalExam">Final Exam</string>
    <string name="averageGrade">Average Grade</string>
    <string name="save">Save</string>
    <string name="studentFullName">Full Name</string>
    <string name="department">Department</string>
    <string name="add_student">Add Student</string>
    <string name="wellcome">Wellcome</string>
    <string name="please_wait">Please Wait</string>
    <string name="lessonList">Lesson List</string>
    <string name="student_List">Student List</string>
    <string name="download_data">Download Data</string>
    <string name="delete_process">Delete process</string>
    <string name="alert_button_no">No</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="alert_button_yes">Yes</string>
    <string name="lesson_deleted">lesson deleted</string>
    <string name="alert_delete_message">Are you sure you want to delete your lesson?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="all_fields_filled">All fields must be filled</string>
    <string name="update">Update</string>
    <string name="password_and_email_incorrrect">The password or email address is incorrect</string>
    <string name="Search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->

<!--    <string-array name="Lessons">-->
<!--        <item>-&#45;&#45;&#45;&#45;&#45;&#45;</item>-->
<!--        <item>Java</item>-->
<!--        <item>Kotlin</item>-->
<!--        <item>Swift</item>-->
<!--        <item>Python</item>-->
<!--        <item>Scala</item>-->
<!--        <item>Perl</item>-->
<!--    </string-array>-->

</resources>