<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_color"
    tools:context=".view.activity.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSignIn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Authentication"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="30dp"
        android:backgroundTint="@color/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signIn"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressTILSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/emailAddress"
                app:hintTextColor="@android:color/white"
                android:textAlignment="center"
                android:textColorHint="@android:color/white"
                android:layout_below="@+id/signIn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressEtSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/item_color"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="#000000"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTILSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailAddressTILSignIn"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:hintTextColor="@android:color/white"
                android:textAlignment="center"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEtSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/item_color"
                    android:inputType="numberPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="#000000"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTILSignIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/signIn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/signInToSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signInBtn"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/signUp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
